# thtk_clone

./: CMakeLists.txt  Readme.md
thanm/: image.c  thanm.c
thanmx/: CMakeLists.txt  anmx_parse.c  anmx_parse.h  ansparse.y  ansscan.l  image.c  thanm.c  thanm.h  thanmx.1
thecl/: CMakeLists.txt  eclarg.c  eclarg.h  ecsparse.y  ecsscan.l  thecl.c  thecl.h  thecl10.c
thstd/: thstd.c
util/: value.c
